manifests/homolog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oficina-app-ingress
  namespace: oficina-homolog
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "oficina-homolog-ip"
    networking.gke.io/managed-certificates: "oficina-app-cert"
spec:
  defaultBackend:
    service:
      name: oficina-app
      port:
        number: 80
